# jupyter-backtest

./: README.md  clicktester.ipynb  pyproject.toml
