[tool.poetry]
name = "jupyter-backtest"
version = "0.1.0"
description = "Backtesting trade ideas with Jupyter."
authors = ["bullbearpanda <bullbearpanda.public@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bullbearpanda/jupyter-backtest"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
